# old_mcdcbot

./: README.md  servers.txt
bot/: Cargo.toml
bot/src/: main.rs
minecraft_manager/src/: chat.rs  events.rs  lib.rs  parse_line.rs  tasks.rs  thread.rs  threaded.rs
