[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minecraft_manager = { path = "../minecraft_manager" }
serenity = { default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
sys-info = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = "0.11.16"
